crates/ir/tests/snapshots/lower_test__json__json_get_missing.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module json__json_get_missing

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/option/None as None(): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/list/Nil as Nil(): List[h]
import core/ordering/LT as LT(): Ordering
import core/ordering/EQ as EQ(): Ordering
import core/ordering/GT as GT(): Ordering
import core/json/JNum as JNum(Float): Json
import core/json/json_object as json_object(List[(String, Json)]): Json
import core/json/json_get as json_get(Json, String): Option[Json]
import core/json/JNull as JNull(): Json
import core/json/JBool as JBool(Bool): Json
import core/json/JStr as JStr(String): Json
import core/json/JArr as JArr(List[Json]): Json
import core/json/JObj as JObj(Map[String, Json]): Json
declare json_get: (Json, String) -> Option[Json]
declare json_object: (List[(String, Json)]) -> Json
declare println: (o) -> Unit

fn main() -> Unit =
  let v1: ~Json = construct Json::JNum#2(1.0)
  let v2: (~String, ~Json) = tuple("a", v1)
  let v3: ~List[(~String, ~Json)] = construct List::Nil#1()
  let v4: ~List[(~String, ~Json)] = construct List::Cons#0(v2, v3)
  let v0: Json = call json_object(v4)
  let v5: Option[Json] = call json_get(v0, "missing")
  switch v5 {
    1 ->
      let v6: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v7: Unit = call println(v6, "None")
      v7
    0 (v8: Json) ->
      let v9: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v10: Unit = call println(v9, "FAIL")
      v10
  }
