crates/ir/tests/snapshots/lower_test__json__json_get_nonobject.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module json__json_get_nonobject

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[s8]): List[s8]
import core/io/println as println(s): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/json/JNum as JNum(Float): Json
import core/json/json_get as json_get(Json, String): Option[Json]
import core/json/JBool as JBool(Bool): Json
import core/json/JStr as JStr(String): Json
import core/json/JArr as JArr(List[Json]): Json
import core/json/JObj as JObj(Map[String, Json]): Json
declare json_get: (Json, String) -> Option[Json]
declare println: (s) -> Unit

fn main() -> Unit =
  let v0: ~Json = construct Json::JNum#2(1.0)
  let v1: Option[Json] = call json_get(v0, "x")
  switch v1 {
    1 ->
      let v2: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v3: Unit = call println(v2, "None")
      v3
    0 (v4: Json) ->
      let v5: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v6: Unit = call println(v5, "FAIL")
      v6
  }
