crates/ir/tests/snapshots/lower_test__json__json_parse_error.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module json__json_parse_error

declare parse_json: (String) -> Result[String, Json]
declare println: (Dict, m) -> Unit

fn main() -> Unit =
  let v0: Result[String, Json] = call parse_json("not json")
  switch v0 {
    1 (v1: a) ->
      let v2: Dict = get_dict Show[String]
      let v3: Unit = call println(v2, "error")
      v3
    0 (v4: b) ->
      let v5: Dict = get_dict Show[String]
      let v6: Unit = call println(v5, "FAIL")
      v6
  }
