crates/ir/tests/snapshots/lower_test__json__json_roundtrip.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module json__json_roundtrip

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/option/None as None(): Option[e]
import core/ordering/LT as LT(): Ordering
import core/ordering/EQ as EQ(): Ordering
import core/ordering/GT as GT(): Ordering
import core/list/Cons as Cons(h, List[h]): List[h]
import core/list/Nil as Nil(): List[h]
import core/result/Ok as Ok(h): Result[g, h]
import core/result/Err as Err(g): Result[g, h]
import core/json/JBool as JBool(Bool): Json
import core/json/JNum as JNum(Float): Json
import core/json/JStr as JStr(String): Json
import core/json/parse_json as parse_json(String): Result[String, Json]
import core/json/json_to_string as json_to_string(Json): String
import core/json/json_object as json_object(List[(String, Json)]): Json
import core/json/JNull as JNull(): Json
import core/json/JBool as JBool(Bool): Json
import core/json/JNum as JNum(Float): Json
import core/json/JStr as JStr(String): Json
import core/json/JArr as JArr(List[Json]): Json
import core/json/JObj as JObj(Map[String, Json]): Json
declare json_object: (List[(String, Json)]) -> Json
declare json_to_string: (Json) -> String
declare parse_json: (String) -> Result[String, Json]
declare println: (o) -> Unit

fn main() -> Unit =
  let v1: ~Json = construct Json::JNum#2(1.0)
  let v2: (~String, ~Json) = tuple("x", v1)
  let v3: ~Json = construct Json::JBool#1(true)
  let v4: (~String, ~Json) = tuple("y", v3)
  let v5: ~Json = construct Json::JStr#3("hello")
  let v6: (~String, ~Json) = tuple("z", v5)
  let v7: ~List[(~String, ~Json)] = construct List::Nil#1()
  let v8: ~List[(~String, ~Json)] = construct List::Cons#0(v6, v7)
  let v9: ~List[(~String, ~Json)] = construct List::Cons#0(v4, v8)
  let v10: ~List[(~String, ~Json)] = construct List::Cons#0(v2, v9)
  let v0: Json = call json_object(v10)
  let v11: String = call json_to_string(v0)
  let v12: Result[String, Json] = call parse_json(v11)
  switch v12 {
    0 (v13: Json) ->
      let v14: String = call json_to_string(v13)
      let v15: Result[String, Json] = call parse_json(v14)
      switch v15 {
        0 (v16: Json) ->
          let v17: Dict[core/show.Show, String] = get_dict core/show.Show[String]
          let v18: Unit = call println(v17, "true")
          v18
        1 (v19: String) ->
          let v20: Dict[core/show.Show, String] = get_dict core/show.Show[String]
          let v21: Unit = call println(v20, v19)
          v21
      }
    1 (v22: String) ->
      let v23: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v24: Unit = call println(v23, v22)
      v24
  }
