crates/ir/tests/snapshots/lower_test__json__json_string.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module json__json_string

declare json_object: (List[(String, Json)]) -> Json
declare json_to_string: (Json) -> String
declare println: (Dict, m) -> Unit

fn main() -> Unit =
  let v1: ~Json = construct Json::JStr#3("hello")
  let v2: (~String, ~Json) = tuple("greeting", v1)
  let v3: ~List[(~String, ~Json)] = construct List::Nil#1()
  let v4: ~List[(~String, ~Json)] = construct List::Cons#0(v2, v3)
  let v0: Json = call json_object(v4)
  let v5: String = call json_to_string(v0)
  let v6: Dict = get_dict Show[String]
  let v7: Unit = call println(v6, v5)
  v7
